--- a/static/styles/dark.css
+++ b/static/styles/dark.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  background-color: #1c2a2f !important;
+  background-color: #0f172a !important;
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
@@ -22,12 +22,12 @@ body {
 .btn-light{
   background-color:#fff;
   color: black;
-  border-radius: 12px;
+  border-radius: 25px;
 }
 .btn-dark{
-  background-color:black;
+  background-color:#0f172a;
   color: #fff;
-  border-radius: 12px;
+  border-radius: 25px;
   opacity: 0;
 }
 h1 {
@@ -460,7 +460,7 @@ ul a:hover {
   border: 2px solid #e2e2e2;
   text-align: left;
   border-radius: 8px;
-  background-color: rgb(36, 41, 46) !important;
+  background-color: #18181b !important;
 }
 .sight {
   float: right;
@@ -476,7 +476,7 @@ ul a:hover {
 #contact {
   max-width: 100vw;
   min-height: 90vh;
-  background: #2c2c2c;
+  background: #18181b;
   color: #ffffff;
 }
 
