--- a/static/styles/light.css
+++ b/static/styles/light.css
@@ -24,13 +24,13 @@ h1 {
 .btn-light{
   background-color:#fff;
   color: black;
-  border-radius: 12px;
+  border-radius: 25px;
   opacity: 0;
 }
 .btn-dark{
-  background-color:black;
+  background-color:#0f172a;
   color: #fff;
-  border-radius: 12px;
+  border-radius: 25px;
 }
 li,
 button,
@@ -465,7 +465,7 @@ ul a:hover {
 #contact {
   max-width: 100vw;
   min-height: 90vh;
-  background: #2c2c2c;
+  background: #18181b;
   color: #ffffff;
 }
 
