--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -444,7 +444,7 @@
           <p>{{obj.description}}</p>
           <div class="button-container">
             <a href="{{obj.live_link}}" target="_blank"
-              >Live Site</a
+              >Demo</a
             >
             <a href="{{obj.code_link}}" target="_blank"
               >Code</a
